# sqlite-http-c

./: .clang-format  CMakeLists.txt  LICENSE.txt  http.c
src/: amalgamate.c  http.c  http.h  http_backend_curl.c  http_backend_dummy.c  http_backend_winhttp.c  http_next_header.c
tests/: CMakeLists.txt  init.c  t_http.c  t_http_next_header.c  test.h  tests.py
tools/: format.bat
